--- a/src/main/resources/templates/transaction.html
+++ b/src/main/resources/templates/transaction.html
@@ -12,7 +12,7 @@
 			<span th:text="((${transaction.type.equals('D')}) ? 'Debit' : 'Credit')"></span>
 		</h1>
 		<p th:inline="text">Date: [[${transaction.date}]]</p>
-		<p th:inline="text">Amount: [[${transaction.amount}]]</p>
+		<p th:inline="text">Amount: <span th:if="${transaction.type.equals('C')}">-</span>[[${transaction.amount}]]</p>
 		<p th:inline="text">Description: [[${transaction.description}]]</p>
 		<p><a href="/transactions">back</a></p>
 	</body>
